# OrcaSlicer-bambulab-fork2

./: .gitignore  CMakeLists.txt  README.md  build_linux.sh  build_macos_bridge.yml  build_release.bat  build_release_macos.sh  build_release_vs.bat  build_release_vs2022.bat  build_windows_bridge.yml
.github/actions/apt-install-deps/: action.yml
.github/workflows/: build_all.yml  build_check_cache.yml  build_linux_appimage.yml  build_linux_portable.yml  build_macos_bridge.yml  build_rpm_fedora.yml  build_windows_bridge.yml  my_build_all.yml  shellcheck.yml
resources/cert/: ca-certificates.crt
resources/profiles/Anycubic/process/: 0.12mm Detail @Anycubic Kobra 2 Neo 0.4 nozzle.json  0.16mm Standard @Anycubic Kobra 2 Neo 0.4 nozzle.json  0.28mm Standard @Anycubic Kobra 2 Neo 0.4 nozzle.json
resources/profiles/Artillery/filament/: Artillery PET @Artillery M1 Pro 0.4 nozzle.json
resources/profiles/OrcaFilamentLibrary/filament/COEX/: COEX NYLEX UNFILLED @System.json
resources/web/data/: text.js
resources/web/model/: model.css
scripts/: appimage_lib_policy.sh  apply_pjarczak_linux_bridge_orca.py  generate_linux_payload_manifest.py  run_gettext.bat
scripts/linux.d/: debian
shared/BambuBridge/Auth/: BridgeAuthPayload.hpp
shared/pjarczak_linux_plugin_bridge_core/: BridgeAuthPayload.hpp  BridgeCoreCallbackQueue.cpp  BridgeCoreCallbackQueue.hpp  BridgeCoreFrame.cpp  BridgeCoreFrame.hpp  BridgeCoreJson.hpp  BridgeCoreMethodManifest.cpp  BridgeCoreMethodManifest.hpp  BridgeCoreSubprocess.cpp  BridgeCoreSubprocess.hpp  BridgeCoreTypes.hpp  CMakeLists.txt  method_manifest.json
src/: CMakeLists.txt
src/dev-utils/platform/unix/: build_linux_image.sh.in
src/libslic3r/: PresetBundle.cpp  PrintConfig.cpp
src/slic3r/: CMakeLists.txt
src/slic3r/GUI/: DeviceManager.cpp  DeviceManager.hpp  GUI_App.cpp  HMS.cpp  HttpServer.cpp  HttpServer.hpp  MediaPlayCtrl.cpp  MediaPlayCtrl.h  PartPlate.cpp  PartPlate.hpp  Plater.cpp  SelectMachine.cpp  SelectMachine.hpp  SendToPrinter.cpp  SendToPrinter.hpp  StatusPanel.cpp  StatusPanel.hpp  UpgradePanel.cpp  UpgradePanel.hpp  WebGuideDialog.cpp  WebUserLoginDialog.cpp  WebUserLoginDialog.hpp  wxMediaCtrl2.cpp
src/slic3r/GUI/DeviceCore/: DevManager.cpp  DevManager.h
src/slic3r/GUI/Printer/: PrinterFileSystem.cpp
src/slic3r/Utils/: BBLCloudServiceAgent.cpp  BBLCloudServiceAgent.hpp  BBLNetworkPlugin.cpp  BBLNetworkPlugin.hpp  BBLPrinterAgent.cpp  BBLPrinterAgent.hpp  Http.cpp  ICloudServiceAgent.hpp  NetworkAgent.cpp  NetworkAgent.hpp  NetworkAgentFactory.cpp  OrcaCloudServiceAgent.cpp  OrcaCloudServiceAgent.hpp  PresetUpdater.cpp  bambu_networking.hpp  json_diff.hpp
src/slic3r/Utils/PJarczakLinuxBridge/: CMakeLists.txt  PJarczakBambuNetworkForwarderExports.cpp  PJarczakBambuNetworkForwarderState.cpp  PJarczakBambuNetworkForwarderState.hpp  PJarczakLinuxBridgeCompat.hpp  PJarczakLinuxBridgeConfig.cpp  PJarczakLinuxBridgeConfig.hpp  PJarczakLinuxSoBridgeEventPump.cpp  PJarczakLinuxSoBridgeEventPump.hpp  PJarczakLinuxSoBridgeLauncher.hpp  PJarczakLinuxSoBridgeLauncher_linux.cpp  PJarczakLinuxSoBridgeLauncher_mac.mm  PJarczakLinuxSoBridgeLauncher_win.cpp  PJarczakLinuxSoBridgeRpcClient.cpp  PJarczakLinuxSoBridgeRpcClient.hpp  PJarczakLinuxSoBridgeRpcProtocol.cpp  PJarczakLinuxSoBridgeRpcProtocol.hpp
tools/pjarczak_bambu_linux_host/: CMakeLists.txt  LinuxPluginHost.cpp  LinuxPluginHost.hpp  main.cpp  package_linux_host_runtime.sh  pjarczak-bambu-linux-host-wrapper
tools/pjarczak_bambu_linux_host/.build-linux-host/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
tools/pjarczak_bambu_macos_linux_wrapper/: pjarczak_bambu_macos_linux_wrapper.sh
tools/pjarczak_bambu_runtime/: fetch_nlohmann_json.py
tools/pjarczak_bambu_runtime/macos/: pjarczak_install_macos_runtime.sh  pjarczak_lima_instance.txt  pjarczak_verify_macos_runtime.sh
tools/pjarczak_bambu_runtime/release/: assemble_windows_runtime_bundle.ps1
tools/pjarczak_bambu_runtime/rootfs/: build_windows_wsl_rootfs.ps1  build_windows_wsl_rootfs.sh
tools/pjarczak_bambu_runtime/wsl/: install_runtime.cmd  install_runtime.ps1  pjarczak_bambu_linux_host  pjarczak_plugin_cache_subdir.txt  pjarczak_wsl_distro.txt  pjarczak_wsl_run_host.sh  verify_runtime.ps1
